# STAG-Information-Model-Mocks

./: .hspt-cpp  .valgrind_targets.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  conanfile.py  valgrind.supp
docs/manual/: 1_installation.md  2_creating_mocks.md  3_using_mocks.md  main.md
includes/: CallableMock.hpp  DeviceMock.hpp  ElementMock.hpp  FakeExecutor.hpp  GroupMock.hpp  MetaInfoMock.hpp  MockBuilder.hpp  ObservableMock.hpp  ReadableMock.hpp  WritableMock.hpp
sources/: CMakeLists.txt
sources/Example/: CMakeLists.txt  main.cpp
sources/Mocks/: CMakeLists.txt  CallableMock.cpp  DeviceMock.cpp  ElementMock.cpp  FakeExecutor.cpp  GroupMock.cpp  MetaInfoMock.cpp  MockBuilder.cpp  ObservableMock.cpp  ReadableMock.cpp  WritableMock.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
unit_tests/: CMakeLists.txt  testRunner.cpp
unit_tests/Mock_Tests/: CallableTests.cc  DeviceTests.cc  ElementTests.cc  GroupTests.cc  MetaInfoTests.cc  MockBuilderTests.cc  ObservableTests.cc  ReadableTests.cc  TestResources.hpp  WritableTests.cc
